tests/forbiddenSysctls/gatekeeper.yaml
../../submodules/gatekeeper-library/library/pod-security-policy/forbidden-sysctls/samples/psp-forbidden-sysctls/constraint.yaml
