tests/forbiddenSysctls/kubewarden.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: psp-allowedprocmounttypes-ae58a
spec:
  module: registry://ghcr.io/kubewarden/policies/sysctl-psp:v1.0.14
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      resources:
        - pods
      operations:
        - CREATE
        - UPDATE
  mutating: false
  settings:
    forbiddenSysctls:
      - kernel.m*
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
