tests/forbiddenSysctls/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-forbiddensysctls
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: sysctls
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          sysctls are limited
        anyPattern:
          - spec:
              =(securityContext):
                =(sysctls):
                  - name: "!kernel.*"
          - spec:
              containers:
                =(securityContext):
                  =(sysctls):
                    - name: "!kernel.*"
